--- a/iGMS/assets/css/style.bundle.css
+++ b/iGMS/assets/css/style.bundle.css
@@ -4,8 +4,14 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-.Point{
-    cursor:pointer;
+.ThuGon{
+    display:none;
+}
+#btnRutGon{
+    display:none
+}
+.Point {
+    cursor: pointer;
 }
 tr:nth-child(even) {
     background-color: #dddddd;
