--- a/iGMS/Views/Home/Index.cshtml
+++ b/iGMS/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
                             <tr role="row">
                                 <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Mã Hàng</th>
                                 <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Tên Hàng Hóa</th>
-                                <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Đơn Vị</th>
+                                <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Size</th>
                                 <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Số Lượng</th>
                                 <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Đơn Giá</th>
                                 <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">% (TLCK)</th>
@@ -26,29 +26,35 @@
             </div>
         </div>
         <div style="width: 100%; position: fixed; bottom: 0; ">
+            <!--begin::Svg Icon | path:assets/media/svg/icons/Navigation/Up-2.svg-->
+            <div style="text-align:center" id="DayDu">
+                <img id="btnDayDu" src="~/Images/icons8-up-30.png" />
+                <img id="btnRutGon" src="~/Images/icons8-down-30.png" />
+            </div>      
+            <!--end::Svg Icon-->
             <div class="row">
                 <div class="col-sm-6" style="border: double; background: #f3f3f3">
                     <div class="form-group row" style="padding:2%">
                         <div class="col-4">
                             <label>Mã Hàng Hóa</label>
-                            <input class="form-control" type="text" placeholder="Mã HH" id="idgoods" />
+                            <input class="form-control" type="text" placeholder="Mã HH" name="idgoods" />
                         </div>
                         <div class="col-4">
                             <label>Số Lượng</label>
-                            <input class="form-control" type="number" placeholder="Số Lượng" id="amountgoods" />
+                            <input class="form-control" type="number" placeholder="Số Lượng" name="amountgoods" />
                         </div>
                         <div class="col-3">
                             <label>(%)CKHH</label>
-                            <input class="form-control" type="number" placeholder="0%" id="discountgoods" />
+                            <input class="form-control" type="number" placeholder="0%" name="discountgoods" />
                         </div>
                         <div class="col-1">
                             <label>Delete</label>
                             <div name="deleteHH" class="Point">
                                 <img src="~/Images/icons8-remove-38.png" />
-                            </div>                     
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group row" style="padding:2%">
+                    <div class="form-group row ThuGon"  style="padding:2%">
                         <div class="col-12">
                             <label>Nhân Viên Tư Vấn</label>
                             <div class="row">
@@ -57,7 +63,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group row" style="padding:2%">
+                    <div class="form-group row ThuGon" style="padding:2%">
                         <div class="col-4">
                             <label>Mã KH</label>
                             <input class="form-control" type="text" placeholder="Mã KH" name="idcustomer" />
@@ -73,7 +79,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6" style="border: double; background: #f3f3f3">
-                    <div class="form-group row" style="padding:2%">
+                    <div class="form-group row ThuGon" style="padding:2%">
                         <div class="col-12">
                             <h1><b>Tổng Giá trị</b></h1>
                         </div>
@@ -86,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group row">
+                    <div class="form-group row ThuGon">
                         <h1 class="col-5 ">Chiết Khấu Trên Hóa Đơn</h1>
                         <div class="col-5">
                             <div class="input-group-prepend">
@@ -94,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group row">
+                    <div class="form-group row ThuGon">
                         <h1 class="col-5 " style="color:red">Khách Trả</h1>
                         <div class="col-5">
                             <div class="input-group-prepend">
@@ -102,7 +108,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" id="SaveBill" class="btn btn-primary btn-lg btn-block">Tính Tiền</button>
+                    <button type="button" name="SaveBill" class="btn btn-primary btn-lg btn-block">Tính Tiền</button>
                 </div>
             </div>
             <div class="row">
@@ -114,11 +120,10 @@
                 <div class="col-2" name="Time"></div>
                 <div class="col-2" name="ThuNgan"></div>
             </div>
-        </div>
 
     </div>
 </div>
-
+    </div>
 <div class="modal" tabindex="-1" role="dialog" id="TinhTien">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
