--- a/iGMS/Views/SaleOrder/Index.cshtml
+++ b/iGMS/Views/SaleOrder/Index.cshtml
@@ -125,7 +125,7 @@
         <div class="form-group row">
             <label for="example-search-input" class="col-2 col-form-label">Tiền Đã Trả<span style="color:red"> (*) </span></label>
             <div class="col-10">
-                <input class="form-control" type="text" placeholder="" id="partialpay" />
+                <input class="form-control" value="0" type="text" placeholder="" id="partialpay" />
             </div>
         </div>
         <div class="form-group row">
