--- a/iGMS/Views/Goods/Index.cshtml
+++ b/iGMS/Views/Goods/Index.cshtml
@@ -19,7 +19,19 @@
                     {
                         enctype = "multipart/form-data"
                     }))
-                    {<table> <tr> <td> Import (<a download href="~/Images/a.xlsx">Mẫu</a> </td> <td><input type = "file" name = "UploadedFile" /> </td> </tr><tr ><td colspan = "2" > <input type = "submit"name = "Submit"value = "Submit" /> </td> </tr> </table>
+                    {<table>
+                    <tr> 
+                    <td>
+                        Import (<a download href="~/Images/HangHoa.xlsx">Mẫu</a> </td> <td><input type = "file" name = "UploadedFile" />
+                                 </td>
+                        </tr>
+                    <tr >
+                        <td colspan = "2" >
+                            <input type = "submit"name = "Submit"value = "Submit" /> 
+
+                                           </td> 
+                                          </tr> 
+                    </table>
                         }
                     </div>
                 <button type="button" class="btn btn-light-primary font-weight-bolder dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
