--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -101,9 +101,10 @@
                         <tr role="row">
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Trạng Thái</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Stt</th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending" hidden></th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Mã Hàng</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Tên Hàng</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Size</th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Xuất Xứ</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Số Lượng</th>
 
                         </tr>
@@ -174,9 +175,10 @@
                         <tr role="row">
                             <th>Stt</th>
                             <th class="">Trạng Thái</th>
+                            <th class="" hidden>Mã Hàng</th>
                             <th class="">Mã Hàng</th>
                             <th class="">Tên Hàng</th>
-                            <th class="">Đơn Vị</th>
+                            <th class="">Xuất Xứ</th>
                             <th class="">Số Lượng</th>
                         </tr>
                     </thead>
@@ -238,13 +240,12 @@
 @section scripts{
     <script>
         $(document).ready(function () {
-            
+            BarcodeEnumrate()
         if (/Android/i.test(navigator.userAgent)) {
            $("#HandHeld").show()
         } else {
             $("#HandHeld").hide()
         }
-            BarcodeEnumrate()
         });
         
         var d = new Date()
@@ -299,8 +300,8 @@
     <script src="~/Scripts/elements.js"></script>
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
-    <script type="text/javascript">
-        var lstEpcSended = [];
+    @*<script type="text/javascript">
+
       //Switch Toggle
         $("#ScanMethod").change(function () {
             if ($(this).is(":checked")) {
@@ -317,7 +318,7 @@
         })
 
         //RFID
-       
+        var lstEpcSended = [];
         rfid.statusEvent = "statusEvent(%json)";
         rfid.tagEvent = "TagHandler(%json)";
         function TagHandler(tagarray) {
@@ -330,12 +331,8 @@
                     lstEpcSended.push(epc)
                 }
             }
-            if (lstEpc > 0) {
-                $.each(lstEpc, function (i, d) {
-                    CompareReceipt(d)
-                })
-            }
 
+            rfidTagQty(lstEpc)
         }
     function RFIDEnumrate() {
 
@@ -406,5 +403,5 @@
         function setPurchaseOrderText(code) {
             $('#purchaseorder').val(code)
         }
-    </script>
+    </script>*@
 }
