--- a/iGMS/Views/DetailWareHouse/Index2.cshtml
+++ b/iGMS/Views/DetailWareHouse/Index2.cshtml
@@ -20,6 +20,13 @@
                 </div>
             </div>
         </div>
+        <div class="form-group row" id="HandHeld">
+            <label for="example-search-input" class="col-2 col-form-label">Phương thức quét<span style="color:red"> (*Handheld)</span> </label>
+            <div class="col-2">
+                <input type="checkbox" id="ScanMethod" checked data-toggle="toggle" data-on="RFID" data-off="Barcode" data-onstyle="success" data-offstyle="primary">
+            </div>
+
+        </div>
         <div class="form-group row">
             <label for="example-password-input" class="col-2 col-form-label">Số Đơn Hàng <span style="color:red"> (*) </span></label>
             <div class="col-10">
@@ -40,13 +47,7 @@
                 <span name="customer"></span>
             </div>
         </div>
-        <div class="form-group row" id="HandHeld">
-            <label for="example-search-input" class="col-2 col-form-label">Phương thức quét<span style="color:red"> (*Handheld)</span> </label>
-            <div class="col-2">
-                <input type="checkbox" id="ScanMethod" checked data-toggle="toggle" data-on="Barcode" data-off="RFID" data-onstyle="success" data-offstyle="primary">
-            </div>
 
-        </div>
         <div class="form-group  row">
             <label for="example-search-input" class="col-2 col-form-label">Hàng Hóa<span style="color:red;"> (*) </span></label>
             <div class="col-10" style="height: 500px;overflow-y: scroll;">
@@ -80,82 +81,70 @@
 </div>
 @section scripts{
     <script src="~/Scripts/XuatKho.js"></script>
+    <script src="~/Scripts/ebapi-modules.js"></script>
+    <script src="~/Scripts/elements.js"></script>
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     <script type="text/javascript">
+        var lstEpcSended = [];
         $(document).ready(function () {
-            BarcodeEnumrate()
+
             if (/Android/i.test(navigator.userAgent)) {
                 $("#HandHeld").show()
             } else {
                 $("#HandHeld").hide()
             }
+            BarcodeEnumrate()
         });
 
         $("#ScanMethod").change(function () {
-            var id = $('#idsaleorder').val().trim().substring(5)
+           
             if ($(this).is(":checked")) {
-                console.log('bar')
-                BarcodeEnumrate()
-                Show(id)
-            } else {
-                console.log('rfid')
-                RFIDEnumrate()
-                Show(id)
+               
 
+                alert('Bắt đầu quét RFID')
+                console.log('rfid')
+                lstEpcSended.length = 0;
+                Show()
+                EB.Barcode.disable()
+                RFIDEnumrate()
+            } else {
+                alert('Bắt đầu quét Barcode')
+                console.log('bar')
+                lstEpcSended.length = 0;
+                Show()
+                rfid.disconnect()
+                BarcodeEnumrate()
             }
 
         })
 
         //RFID
-        var lstEpcSended = [];
+     
         rfid.statusEvent = "statusEvent(%json)";
         rfid.tagEvent = "TagHandler(%json)";
         function TagHandler(tagarray) {
-            var lstEpc = []
-            lstEpc.length = 0
+
             for (i = 0; i < tagarray.TagData.length; i++) {
                 var epc = tagarray.TagData[i].tagID
                 if (!lstEpcSended.includes(epc)) {
-                    lstEpc.push(epc)
-                    lstEpcSended.push(epc)
+                    CompareReceipt(epc)
                 }
             }
 
-            rfidTagQty(lstEpc)
+
         }
         function RFIDEnumrate() {
-            EB.Barcode.disable()
 
             rfid.transport = 'serial'
             rfid.enumerate();
             rfid.readerID = 'RFID1';
             rfid.connect();
-            alert('Bắt đầu quét RFID')
+
         }
 
 
-        ///Kiem tra so luong bang rfid
-        function rfidTagQty(epc) {
-            $.ajax({
-                url: '/RFID/getBarcodeByEPC',
-                type: 'POST',
-                data: {
-                    tags: epc
-                },
-                success: function (result) {
-                    if (result.code = 200) {
-                        $.each(result.barcode, function (i, d) {
-
-                            CompareReceipt(d)
-
-                        })
-                    } else {
-                        alert("error")
-                    }
-                }
-            })
-        }
+        
 
         //Barcode
         // MC3300
@@ -168,7 +157,6 @@
         }
 
         function MouseCheck(code) {
-            alert('Bắt đầu quét Barcode')
             var txt = getText(document.activeElement);
 
 
@@ -176,8 +164,10 @@
                 setPurchaseOrderText(code.data)
 
             } else {
-
-                fnBarcodeScanned(code.data)
+                var rs = code.data
+                rs = rs.substring(0, barcode.length - 8)
+                alert(rs)
+                fCompareReceipt(rs)
             }
 
         }
@@ -190,9 +180,7 @@
             return null;
         }
 
-        function fnBarcodeScanned(jsonObject) {
-            CompareReceipt(jsonObject);
-        }
+      
 
         function setPurchaseOrderText(code) {
             $('#idsaleorder').val(code)
