--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -20,6 +20,13 @@
                 </div>
             </div>
         </div>
+        <div class="form-group row" id="HandHeld">
+            <label for="example-search-input" class="col-2 col-form-label">Phương thức quét<span style="color:red"> (*Handheld)</span> </label>
+            <div class="col-2">
+                <input type="checkbox" id="ScanMethod" checked data-toggle="toggle" data-on="RFID" data-off="Barcode" data-onstyle="success" data-offstyle="primary">
+            </div>
+
+        </div>
         <div class="form-group row">
             <label for="example-password-input" class="col-2 col-form-label">Số Phiếu Nhận <span style="color:red"> (*) </span></label>
             <div class="col-10">
@@ -84,14 +91,8 @@
                 <span name="warehouse"></span>
             </div>
         </div>
-       
-        <div class="form-group row"  id="HandHeld">
-            <label for="example-search-input" class="col-2 col-form-label">Phương thức quét<span style="color:red"> (*Handheld)</span> </label>
-            <div class="col-2">
-                <input type="checkbox" id="ScanMethod" checked data-toggle="toggle" data-on="Barcode" data-off="RFID" data-onstyle="success" data-offstyle="primary">
-            </div>
-           
-        </div>
+
+
 
         <div class="form-group  row tablenhan">
             <label for="example-search-input" class="col-2 col-form-label">Hàng Hóa<span style="color:red"> (*) </span></label>
@@ -300,41 +301,42 @@
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     <script type="text/javascript">
+        rfid.statusEvent = "statusEvent(%json)";
+        rfid.tagEvent = "TagHandler(%json)";
         var lstEpcSended = [];
       //Switch Toggle
         $("#ScanMethod").change(function () {
             if ($(this).is(":checked")) {
-                getDetailGoodOrder()
-                BarcodeEnumrate()
-
-            } else {
-
+                alert('Bắt đầu quét RFID')
+                console.log('rfid')
+                lstEpcSended.length = 0;
                 getDetailGoodOrder()
                 EB.Barcode.disable()
                 RFIDEnumrate()
+                
+            } else {
+                alert('Bắt đầu quét Barcode')
+                console.log('bar')
+                lstEpcSended.length = 0;
+                getDetailGoodOrder()
+                rfid.disconnect()
+                BarcodeEnumrate()
             }
 
         })
-
+       
         //RFID
        
-        rfid.statusEvent = "statusEvent(%json)";
-        rfid.tagEvent = "TagHandler(%json)";
+      
         function TagHandler(tagarray) {
-            var lstEpc = []
-            lstEpc.length = 0
+
             for (i = 0; i < tagarray.TagData.length; i++) {
                 var epc = tagarray.TagData[i].tagID
                 if (!lstEpcSended.includes(epc)) {
-                    lstEpc.push(epc)
-                    lstEpcSended.push(epc)
+                    CompareReceipt(epc)
                 }
             }
-            if (lstEpc > 0) {
-                $.each(lstEpc, function (i, d) {
-                    CompareReceipt(d)
-                })
-            }
+
 
         }
     function RFIDEnumrate() {
@@ -343,31 +345,31 @@
             rfid.enumerate();
             rfid.readerID = 'RFID1';
             rfid.connect();
-            alert('Bắt đầu quét RFID')
+           
         }
 
 
         ///Kiem tra so luong bang rfid
-        function rfidTagQty(epc) {
-            $.ajax({
-                url: '/rfid/getbarcodebyepc',
-                type: 'POST',
-                data: {
-                    tags: epc
-                },
-                success: function (result) {
-                    if (result.code = 200) {
-                        $.each(result.barcode, function (i, d) {
+        //function rfidTagQty(epc) {
+        //    $.ajax({
+        //        url: '/rfid/getbarcodebyepc',
+        //        type: 'POST',
+        //        data: {
+        //            tags: epc
+        //        },
+        //        success: function (result) {
+        //            if (result.code = 200) {
+        //                $.each(result.barcode, function (i, d) {
 
-                            CompareReceipt(code.data)
+        //                    CompareReceipt(code.data)
 
-                        })
-                    } else {
-                        alert("error")
-                    }
-                }
-            })
-        }
+        //                })
+        //            } else {
+        //                alert("error")
+        //            }
+        //        }
+        //    })
+        //}
 
         //Barcode
         // MC3300
@@ -380,7 +382,6 @@
         }
 
         function MouseCheck(code) {
-            alert('Bắt đầu quét Barcode')
             var txt = getText(document.activeElement);
 
 
@@ -388,8 +389,10 @@
                 setPurchaseOrderText(code.data)
 
             } else {
-
-                fnBarcodeScanned(code.data)
+                var rs = code.data
+                rs = rs.substring(0, barcode.length - 8)
+                alert(rs)
+                CompareReceipt(rs)
             }
 
         }
