--- a/iGMS/Views/DetailWareHouse/Index2.cshtml
+++ b/iGMS/Views/DetailWareHouse/Index2.cshtml
@@ -141,9 +141,11 @@
         function RFIDEnumrate() {
 
             rfid.transport = 'serial'
-            rfid.enumerate();
             rfid.readerID = 'RFID1';
-            rfid.connect();
+            rfid.enumerate();
+            setTimeout(function () {
+                rfid.connect();
+            }, 1000);
 
         }
 
