--- a/iGMS/Views/DetailWareHouse/List.cshtml
+++ b/iGMS/Views/DetailWareHouse/List.cshtml
@@ -59,7 +59,8 @@
 
             }
 
-            
+            rfid.statusEvent = "statusEvent(%json)";
+            rfid.tagEvent = "TagHandler(%json)";
             RFIDEnumrate()
         })
         
@@ -117,11 +118,12 @@
         function RFIDEnumrate() {
           
             rfid.transport = 'serial'
-            rfid.enumerate();
             rfid.readerID = 'RFID1';
-            rfid.connect();
-            rfid.statusEvent = "statusEvent(%json)";
-            rfid.tagEvent = "TagHandler(%json)";
+            rfid.enumerate();
+            setTimeout(function () {
+                rfid.connect();
+            }, 1000);
+            
         }
         var lstEpcSended = [];
         $("#ScanMethod").change(function () {
